[workspace]
resolver = "2"
members = [
    "lab02",
]

[workspace.dependencies]
axum = { version = "0.8.8", features = ["multipart"] }
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "sqlite", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5.60", features = ["derive"] }
log = "0.4.29"
env_logger = "0.11.9"
anyhow = "1.0.102"
