[workspace]
resolver = "2"
members = [
    "lab02",
    "lab03",
    "lab04",
    "lab05",
    "lab06",
    "lab07",
    "lab08",
]

[workspace.dependencies]
axum = { version = "0.8.8", features = ["multipart"] }
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "sqlite", "macros"] }
hyper = {version = "1.8.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5.60", features = ["derive"] }
log = "0.4.29"
env_logger = "0.11.9"
anyhow = "1.0.102"
