[package]
name = "lab04"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
hyper = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
hyper-util = { version = "0.1", features = ["full"] }
hyper-proxy = { version = "0.9.1" }
reqwest = { version = "0.13.2" }
sha2 = "0.10"
hex = "0.4"
headers = "0.4"

http-body-util = { version = "0.1" }
bytes = { version = "1.2" }
http = { version = "1" }

